# http-server

./: .gitignore  CMakeLists.txt  README.md  makefile  makefile_old  server  test_test.c
.github/workflows/: c-cpp.yml
include/: errors.h  hashTable.h  helpers.h  requestHandler.h  requestParser.h  responseBuilder.h
src/: calc.c  hashTable.c  main.c  requestParser.c  socketHandler.c
src/include/: calc.h  hashTable.h  requestParser.h  socketHandler.h
src/mods/: hashTable.c  helpers.c  requestHandler.c  requestParser.c  responseBuilder.c  socketHandler.c
test/: Testcalc.c  TesthashTable.c  TestrequestParser.c  TestsocketHandler.c
tests/: CMakeLists.txt  test_hashTable.c  test_requestParser.c  test_responseBuilder.c  test_socketHandler.c
